# c-cord

./: .gitmodules  CMakeLists.txt  README.md
examples/pingbot/: main.c
include/c_cord/: channel.h  client.h  emoji.h  endpoints.h  events.h  guild.h  message.h  permissions.h  role.h  user.h  utils.h
include/discord_c/: channel.h  client.h  emoji.h  endpoints.h  events.h  guild.h  message.h  permissions.h  role.h  user.h  utils.h
src/: client.c  guild.c  user.c  utils.c
